# website

./: .copier-answers.yml  .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .travis.yml  Aman  LICENSE  QREADME.md  README.md  oca_dependencies.txt  test-requirements.txt
9.0_website_switcher/: __init__.py  __openerp__.py  readme.md
analytics_piwik/: README.rst
antiun_backend_theme/: README.rst  __init__.py  __openerp__.py
antiun_frontend_theme/: README.rst  __init__.py  __openerp__.py
auth_crypt_cryptcontext_change/: __openerp__.py
auth_signup_verify_email/: README.rst  __openerp__.py
base_exports_manager/: README.rst  __init__.py  __openerp__.py
crm_activity/: README.rst  __openerp__.py
crm_activity_nace/: README.rst  __openerp__.py
crm_association/: README.rst  __openerp__.py
crm_capital/: README.rst  __openerp__.py
crm_category_description/: README.rst  __openerp__.py
crm_department/: README.rst  __openerp__.py
crm_employees/: README.rst  __openerp__.py
crm_heading/: README.rst  __openerp__.py
crm_job_position/: README.rst  __openerp__.py
crm_location/: README.rst  __init__.py  __openerp__.py
crm_location_nuts/: README.rst  __openerp__.py
crm_partner_department/: README.rst  __openerp__.py
crm_sector/: README.rst  __openerp__.py
event_action_attend_multi/: README.rst  __init__.py  __openerp__.py
event_fair/: README.rst  __init__.py  __openerp__.py
event_parent/: __init__.py  __openerp__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+5882 files in other folders)
